# trionesDevice

./: LICENSE  README.md  pyproject.toml
src/TrionesDevice/: __init__.py
tests/: test.py
